macro fix, buff scrollbar, buff js

--- a/Pathfinder-Neceros/pathfinder-neceros.css
+++ b/Pathfinder-Neceros/pathfinder-neceros.css
@@ -54,21 +54,23 @@
 	text-align: center;
 }
 
-div.sheet-table-buff.sheet-buffs, div.sheet-table-buff.sheet-buffs2{
+/* this is ignored even with !important */
+div.sheet-section.sheet-section-core div.sheet-table-flow{
 overflow-x:auto;
 }
+
 
 .sheet-entry_med, input[type="text"].sheet-entry_med, .sheet-entry_med  input[type="text"],
 span.sheet-entry_med
  {
 	min-width:60px;
-    width:80px;
+    width:100px;
 	text-align:left;
 }
 
 span.sheet-table-data.sheet-buff-toggle {
 	min-width:38px;
-	width:40px;
+	width:42px;
 }
 
 .sheet-divider , 
@@ -166,21 +168,18 @@ input[type="text"], input[type="number"] {
 	border: 0 solid #000;
 	border-bottom-width: 1px;
 }
-.sheet-calc {
-	background-color:#DDDDDD;
-}
-input .sheet-calc {
-	background-color:#DDDDDD;
-	border-bottom:0px;
-}
-input.sheet-calc,
+
+.sheet-calc, input.sheet-calc, textarea.sheet-calc,
 input[type="text"].sheet-calc,
 input[type="number"].sheet-calc,
 input[type="text"]:disabled, 
 input[type="number"]:disabled {
 	background-color: rgba(74, 100, 134, 0.28);
-	border: 0 solid #000;
+	border-width: 0px;
 	color: #222;
+	padding-left:4px;
+	padding-right:0px;
+    -webkit-appearance: none; 
 }
 
 input[type="text"], select {
